# EbookAPI

./: .env  .gitignore  .gitpod.yml  README.md  Vagrantfile  api.py  app.py  main.py  models.py  pyproject.toml  setup.cfg  setup_python.sh
NeosEbook/: api.py  app.py  constants.py  database.py  exceptions.py  models.py  repository.py  schema.py  service.py  settings.py  strategies.py  utils.py
NeosEbook/commands/: import_epub.py
NeosEbook/strategies/books/: Epub.py  __init__.py  base.py
NeosEbook/strategies/images/: ImageProcessor.py  __init__.py
NeosEbook/tests/: conftest.py  fixtures.py  test_book_repository.py  test_endpoints.py  test_strategies.py
migrations/: env.py
migrations/versions/: 7077af9276f1_create_account_table.py
tests/: fixtures.py  test_endpoints.py
