[tool.poetry]
name = "neosebookreader"
version = "0.0.1"
description = "A simnple server reading your epub files and serving them as text and images in NEOS compatible way"
authors = ["lorow <smykupyka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^21.11b1"
isort = "^5.10.1"
fastapi = "^0.70.0"
pytest = "^6.2.5"
uvicorn = "^0.15.0"
requests = "^2.26.0"
bumpver = "^2021.1114"
databases = {extras = ["sqlite"], version = "^0.5.3"}
alembic = "^1.7.5"
uuid = "^1.30"
python-dotenv = "^0.19.2"
pytest-asyncio = "^0.16.0"
EbookLib = "^0.17.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"